--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
   "devDependencies": {
     "@parcel/transformer-sass": "^2.7.0",
     "parcel": "^2.7.0",
+    "postcss": "^8.4.21",
+    "postcss-custom-properties": "^12.1.11",
+    "postcss-import": "^15.1.0",
+    "postcss-purgecss": "^2.0.3",
+    "postcss-url": "^10.1.3",
     "prettier": "2.8.3"
   }
 }
