--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "postcss-import": "^15.1.0",
     "postcss-purgecss": "^2.0.3",
     "postcss-url": "^10.1.3",
-    "prettier": "2.8.3"
+    "prettier": "2.8.3",
+    "process": "^0.11.10"
   }
 }
